[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/room_panel.gd" id="1_room_panel"]

[node name="RoomPanel" type="PanelContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_room_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Build Room (R to toggle)"
horizontal_alignment = 1

[node name="RoomButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer"]
layout_mode = 2
text = "Hover over a room type for info"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer"]
layout_mode = 2
horizontal_alignment = 1
